--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,6 @@
         </div>
     </main>
 </body>
-<script src="../src/reset.js"></script>
-    <script src="../src/logic.js"></script>
+<script src="./reset.js"></script>
+    <script src="./logic.js"></script>
 </html>
